<resources>
    <string name="app_name">KissZoo</string>
    <string name="ok">Ok</string>
    <string name="you_are">You Are?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="student_login">Player Login</string>
    <string name="coach_login">Coach Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="coach_register">Coach Register</string>
    <string name="student_register">Player Register</string>
    <string name="start_training_choose_your_sport">Start training \n Choose your sport!</string>
    <string name="change_category">Change Category</string>
    <string name="change_level">Change Level</string>
    <string name="lessons">Lessons</string>
    <string name="choose_part_of_lesson">Choose Part of Lesson</string>
    <string name="student">Player</string>
    <string name="settings">Settings</string>
    <string name="coach">Coach</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="sports_learning_app">✓ Sports-Learning App</string>
    <string name="create_online_lessons">✓ Create Online-lessons</string>
    <string name="sports_school_concept">✓ Sports school Concept</string>
    <string name="choose_language_string">Choose Language</string>
    <string name="choose_chapter">Choose Chapter</string>
    <string name="done">Done</string>
    <string name="select_level">Select Level</string>
    <string name="change_language">Change Language</string>
    <string name="text_great">Great!</string>
    <string name="text_doing_great">You are doing great! Just keep going</string>
    <string name="text_continue">Continue</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_no_previous_video">No Previous Video</string>
    <string name="text_no_next_video">No Next Video</string>
    <string name="text_welcome">Welcome</string>
</resources>