<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/born_fearless_bg"
    tools:context=".activities.RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/card_background_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvRegisterHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/student_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:hint="@string/email"
            android:textColor="@color/text"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterHeading"/>
        <EditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:hint="@string/username"
            android:textColor="@color/text"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail"/>
        <EditText
            android:id="@+id/etRegisterUserAge"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:hint="@string/age"
            android:textColor="@color/text"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterUsername"/>
        <EditText
            android:id="@+id/etRegisterConfirmPassword"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRegisterUserAge"/>
        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/confirm_password"
            android:textColor="@color/text"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRegisterConfirmPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/register"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/textYellow"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/pbRegister"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>