<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.SplashActivity">

    <ImageView
        android:id="@+id/ivLogoText"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/black_logo_born_fearless"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/ivBornFearlessText"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:src="@drawable/born_fearless_text"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/ivLogoText"
        app:layout_constraintEnd_toEndOf="@+id/ivLogoText"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoText"/>
    <TextView
        android:id="@+id/tvFirstTextSplash"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:text="@string/sports_learning_app"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/ivBornFearlessText"
        app:layout_constraintStart_toStartOf="@+id/ivBornFearlessText"
        app:layout_constraintEnd_toEndOf="@+id/ivBornFearlessText"/>
    <TextView
        android:id="@+id/tvSecondTextSplash"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/create_online_lessons"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="@+id/tvFirstTextSplash"
        app:layout_constraintEnd_toEndOf="@+id/tvFirstTextSplash"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstTextSplash"/>
    <TextView
        android:id="@+id/tvThreeTextSplash"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/sports_school_concept"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondTextSplash"
        app:layout_constraintStart_toStartOf="@+id/tvSecondTextSplash"
        app:layout_constraintEnd_toEndOf="@+id/tvSecondTextSplash"/>

</androidx.constraintlayout.widget.ConstraintLayout>