<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/born_fearless_bg"
    tools:context=".activities.SelectUserTypeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:text="@string/you_are"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clAccountType"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/student"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/textYellow"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCoach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvStudent">

            <TextView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/coach"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/textYellow"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>